# ptil-semantic-encoder

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MARKETING.md  MARKET_ANALYSIS.md  MONETIZATION.md  PRODUCTION_ROADMAP.md  PTIL_DETAILED_EXPLANATION.md  README.md  Technical_Validation.md  VIDEO_SCRIPT.md  docker-compose.yml  efficiency_report.txt  pyproject.toml  requirements.txt  setup.py  validation_report.txt  verify_ptil.py
.hypothesis/constants/: 004e722d2b39195a  005be612047aa41d  006b559781a41f7f  007e482ef6989729  007e72c346acd610  009f0116eab76fe1  00c31401a29aafc1  00d1ec1f014460c6  00e524b9753ae003  011446e49dc96606  0128603b5e7a94c2  0175637d9e298755  01767735a9e8256f  01b21858bc84ad91  01f0a8720e152f49  020fe9c2d451b249  0221ac1d32810d42  023942a02c7311db  026be50beffea8d4  02be590a6419dfd3  02c9a85645440086  02eceb2fd2d826c2  02fb3c1b426206d7  02fef9ef34523d7e  0303d8c7ffe4ee2d  0316d3ae566d5945  031f85f1c11bb00b  0387ce89d77295c2  039bd3df43b97cbd  03ab1e6e6bb21915  03ab32a54b7ad185  03b0d3ea0ec5c40c  03e9bfd966dc214b  03f93ae630d9f06a  041b3f27cfe53c7e  041b82baf95116f0  04384788a0e1d774  0454a550904ca023  045c4843aeb83d72  048e7031d7cf414b  (+2744 more)
.hypothesis/tmp/: tmp00r2vk7j  tmp02zxt1cd  tmp04302ahx  tmp1vy_x_fy  tmp2m66llgu  tmp2t67qkru  tmp48j4boi4  tmp4bgd9u5x  tmp6ietxplp  tmp6ys4t2w_  tmp845j84lo  tmp8few_9xy  tmp8jbb9_b7  tmp8wsh343n  tmp9onziufb  tmp_9erbz00  tmp_k9_wqqj  tmpatgcaur9  tmpbhtx17vf  tmpc6pnlrju  tmpcz68mxue  tmpd9zuclia  tmpdakdk33t  tmpehl8wm5u  (+36 more)
benchmarks/: benchmark_real.py  benchmark_results.json  check_meaning.py  compare_agentic.py  compare_compression.py  compare_methods.py  test_all_use_cases.py  test_rag_system.py
demos/: chatbot_router.py  claude_proxy_example.py  intent_classification.py  semantic_search.py
docs/: API_REFERENCE.md  QUICKSTART.md  REQUIREMENTS_TRACEABILITY.md  USER_GUIDE.md
examples/: advanced_features.py  basic_usage.py  check_token_efficiency.py  cross_lingual_demo.py  performance_benchmark.py  validate_requirements.py
integrations/: autogpt_example.py  crewai_example.py  dify_example.py  flowise_example.py  langchain_example.py  n8n_workflows.py  openwebui_example.py
ptil/: __init__.py  cache.py  claude_middleware.py  claude_proxy.py  cli.py  compact_serializer.py  compatibility.py  config.py  cross_lingual_validator.py  csc_generator.py  csc_serializer.py  efficiency_analyzer.py  encoder.py  linguistic_analyzer.py  logging_context.py  meta_detector.py  metrics.py  models.py  ops_extractor.py  rag.py  roles_binder.py  root_mapper.py  tokenizer_backends.py  tokenizer_compatibility.py  ultra_compact_serializer.py  ultra_ultra_serializer.py
tests/: __init__.py  test_cross_lingual_properties.py  test_csc_generator.py  test_csc_generator_properties.py  test_csc_serializer.py  test_csc_serializer_properties.py  test_efficiency_properties.py  test_encoder.py  test_encoder_properties.py  test_error_handling_comprehensive.py  test_integration_all_requirements.py  test_linguistic_analyzer.py  test_meta_detector.py  test_models.py  test_ops_extractor.py  test_ops_extractor_properties.py  test_roles_binder.py  test_roles_binder_properties.py  test_root_mapper.py  test_root_mapper_properties.py  test_tokenizer_compatibility_properties.py  test_training_integration_properties.py
(+251 files in other folders)
