[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptil-semantic-encoder"
version = "0.4.0"
description = "Pre-Tokenization Intelligence Layer — deterministic semantic abstraction to Compressed Semantic Code"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["nlp", "semantic", "encoder", "csc", "tokenizer"]

authors = [
    {name = "PTIL Contributors"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "spacy>=3.4.0",
]

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5.0"]
server = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]
metrics = ["prometheus-client>=0.17.0"]
all = ["ptil-semantic-encoder[tiktoken,server,metrics]"]

[project.urls]
Homepage = "https://github.com/abhi9199-tech42/ptil-semantic-encoder"
Repository = "https://github.com/abhi9199-tech42/ptil-semantic-encoder"

[project.scripts]
ptil = "ptil.cli:main"

[tool.setuptools.packages.find]
include = ["ptil*"]

[tool.setuptools.package-data]
"ptil.ontology" = ["ptil.db"]
