[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptil"
version = "1.0.1"
description = "80% text compression that stays searchable. Store 10x more. Search without decompressing."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["compression", "rag", "search", "semantic", "agent", "memory"]

authors = [
    {name = "PTIL Contributors"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Database",
]

dependencies = [
    "spacy>=3.4.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]
all = ["ptil[server]"]

[project.urls]
Homepage = "https://github.com/abhi9199-tech42/ptil-semantic-encoder"
Repository = "https://github.com/abhi9199-tech42/ptil-semantic-encoder"
Documentation = "https://github.com/abhi9199-tech42/ptil-semantic-encoder#readme"

[project.scripts]
ptil = "ptil.cli:main"

[tool.setuptools.packages.find]
include = ["ptil*"]

[tool.setuptools.package-data]
"ptil.ontology" = ["*.db"]
